test on desktop \

--- a/app/index.html
+++ b/app/index.html
@@ -18,10 +18,43 @@
 <div class="whole_container">
 
   <div class="category_container">
-
+    <div class="logo">GAUSIAN Store</div>
+    <div class="search_bar">
+      <div class="search_bar_input">Search</div>
+      <div class="search_bar_bn"></div>
+    </div>
+    <div class="main_navigator_h1">Popular</div>
+    <div class="main_navigator_h1">Business Tools</div>
+      <div class="main_navigator_h2">Administrative</div>
+      <div class="main_navigator_h2">Advertising</div>
+      <div class="main_navigator_h2">Analytics</div>
+      <div class="main_navigator_h2">Collaborative</div>
+      <div class="main_navigator_h2">Customer Relationship</div>
+      <div class="main_navigator_h2">e-Commerce</div>
+      <div class="main_navigator_h2">Financial</div>
+      <div class="main_navigator_h2">Human Resource</div>
+      <div class="main_navigator_h2">Inventory</div>
+      <div class="main_navigator_h2">Manufacturing</div>
+      <div class="main_navigator_h2">Marketing</div>
+      <div class="main_navigator_h2">Projects</div>
+      <div class="main_navigator_h2">Public Relationship</div>
+      <div class="main_navigator_h2">Risk</div>
+      <div class="main_navigator_h2">Supplier</div>
+      <div class="main_navigator_h2">Tax</div>
+    <div class="main_navigator_h1">Productivity</div>
+    <div class="main_navigator_h1">Training</div>
+    <div class="main_navigator_h1">Utilities</div>
+    <div class="main_navigator_h1">Other</div>
   </div>
   
   <div class="detail_container">
+    <div class="page_header">Popular</div>
+    <div class="app_unit"></div>
+    <div class="app_unit"></div>
+    <div class="app_unit"></div>
+    <div class="app_unit"></div>
+    <div class="app_unit"></div>
+    <div class="app_unit"></div>
     <div class="app_unit"></div>
     <div class="app_unit"></div>
     <div class="app_unit"></div>
