try feelings on desktop

--- a/app/index.html
+++ b/app/index.html
@@ -49,8 +49,18 @@
   
   <div class="detail_container">
     <div class="page_header">Popular</div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Customers</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Customers</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
     <div class="app_unit"></div>
     <div class="app_unit"></div>
     <div class="app_unit"></div>
