--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 <body ng-controller="CustomerListCtrl" id="CustomerCtrl">
 <div class="whole_container">
 
-  <div class="category_container">
+  <div id="category_container">
     <div class="logo">GAUSIAN Store</div>
     <div class="search_bar">
       <div class="search_bar_input">Search</div>
@@ -38,6 +38,7 @@
       <div class="main_navigator_h2">Marketing</div>
       <div class="main_navigator_h2">Projects</div>
       <div class="main_navigator_h2">Public Relationship</div>
+      <div class="main_navigator_h2">Research</div>
       <div class="main_navigator_h2">Risk</div>
       <div class="main_navigator_h2">Supplier</div>
       <div class="main_navigator_h2">Tax</div>
@@ -52,12 +53,12 @@
     <div class="app_unit">
       <div class="app_mask"></div>
       <div class="app_name">Customers</div>
-      <div class="app_brief">Management your customers</div>
+      <div class="app_brief">Maintain all your customers</div>
       <div class="app_price">FREE</div>
     </div>
     <div class="app_unit">
       <div class="app_mask"></div>
-      <div class="app_name">Customers</div>
+      <div class="app_name">Calculator</div>
       <div class="app_brief">Management your customers</div>
       <div class="app_price">FREE</div>
     </div>
@@ -71,6 +72,16 @@
     <div class="app_unit"></div>
     <div class="app_unit"></div>
     <div class="app_unit"></div>
+  </div>
+
+  <div id="overlay_container">
+    <div id="overlay_name">APP Name</div>
+    <div id="overlay_brief">APP Name</div>
+    <div id="overlay_rate">APP Name</div>
+    <div id="overlay_category">APP Name</div>
+    <div id="overlay_price">APP Name</div>
+    <div id="overlay_install"></div>
+    <div id="overlay_cancel"></div>
   </div>
 
     <script src="jquery-1.11.2.min.js"></script>
