add open app details

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/customer.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
@@ -75,20 +75,22 @@
   </div>
 
   <div id="overlay_container">
-    <div id="overlay_name">APP Name</div>
-    <div id="overlay_brief">APP Name</div>
-    <div id="overlay_rate">APP Name</div>
-    <div id="overlay_category">APP Name</div>
-    <div id="overlay_price">APP Name</div>
-    <div id="overlay_install"></div>
-    <div id="overlay_cancel"></div>
+    <div class="overlay_app_edge"></div>
+    <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
+    <div class="overlay_name">APP Name</div>
+    <div class="overlay_brief">APP Name</div>
+    <div class="overlay_rate">APP Name</div>
+    <div class="overlay_category">APP Name</div>
+    <div class="overlay_price">APP Name</div>
+    <div class="overlay_install"></div>
+    <div class="overlay_cancel"></div>
   </div>
 
     <script src="jquery-1.11.2.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="js/controller.js"></script>
-    <script src="js/customer.js"></script>
+    <script src="js/display.js"></script>
     <script src="app.js"></script>
     <script src="view1/view1.js"></script>
     <script src="view2/view2.js"></script>
