--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,8 @@
   </div>
 
   <div id="overlay_container">
-    <div class="overlay_app_edge"></div>
+    <div class="overlay_close">CLOSE</div>
+<!--     <div class="overlay_app_edge"></div>
     <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
     <div class="overlay_name">APP Name</div>
     <div class="overlay_brief">APP Name</div>
@@ -83,7 +84,7 @@
     <div class="overlay_category">APP Name</div>
     <div class="overlay_price">APP Name</div>
     <div class="overlay_install"></div>
-    <div class="overlay_cancel"></div>
+    <div class="overlay_cancel"></div> -->
   </div>
 
     <script src="jquery-1.11.2.min.js"></script>
