--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,12 @@
   </div>
 
   <div id="overlay_container">
+    <div class="overlay_app_header">
+      <div class="overlay_app_header_name">Customer 
+        <span style="font-size: 14px;">(Faked Data for Experiencing Only)</span>
+      </div>
+      <div class="overlay_app_header_close"></div>
+    </div>
     <div class="overlay_iframe_container fadeIn fadeIn-50ms">
       <iframe 
         class="full" 
