--- a/app/index.html
+++ b/app/index.html
@@ -77,9 +77,9 @@
   <div id="overlay_container">
     <div class="overlay_app_header">
       <div class="overlay_app_header_name">Customer 
-        <span style="font-size: 14px;">(Faked Data for Experiencing Only)</span>
+        <span style="font-size: 14px;">(Fake Data for Experiencing Only)</span>
       </div>
-      <div class="overlay_app_header_close"></div>
+      <div class="overlay_close">CLOSE</div>
     </div>
     <div class="overlay_iframe_container fadeIn fadeIn-50ms">
       <iframe 
@@ -88,15 +88,14 @@
         src="http://gausian-developers.github.io/user-app-template5/app/index.html">
       </iframe>
     </div>
-    <div class="overlay_close">CLOSE</div>
-    <div class="overlay_app_edge"></div>
+    <div class="overlay_install">Install</div>
+<!--     <div class="overlay_app_edge"></div>
     <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
-<!--     <div class="overlay_name">APP Name</div>
+    <div class="overlay_name">APP Name</div>
     <div class="overlay_rate">Rating 5</div>
     <div class="overlay_price">FREE</div>
     <div class="overlay_brief">This is an introduction to this app.</div>
-    <div class="overlay_snapshot">Snapshot</div>
-    <div class="overlay_install">Add to Desktop</div> -->
+    <div class="overlay_snapshot">Snapshot</div> -->
   </div>
 
     <script src="jquery-1.11.2.min.js"></script>
