--- a/app/index.html
+++ b/app/index.html
@@ -89,13 +89,15 @@
       </iframe>
     </div>
     <div class="overlay_install">Install</div>
-<!--     <div class="overlay_app_edge"></div>
+    <div class="overlay_app_edge"></div>
     <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
-    <div class="overlay_name">APP Name</div>
-    <div class="overlay_rate">Rating 5</div>
+    <div class="overlay_name">Customers</div>
     <div class="overlay_price">FREE</div>
-    <div class="overlay_brief">This is an introduction to this app.</div>
-    <div class="overlay_snapshot">Snapshot</div> -->
+    <div class="overlay_brief">
+      This is an introduction to this app. This is an introduction to this app. This is an introduction to this app.
+      This is an introduction to this app. This is an introduction to this app. This is an introduction to this app.
+    </div>
+<!--     <div class="overlay_snapshot">Snapshot</div> -->
   </div>
 
     <script src="jquery-1.11.2.min.js"></script>
