--- a/app/index.html
+++ b/app/index.html
@@ -95,9 +95,11 @@
     <div class="overlay_price">FREE</div>
     <div class="overlay_brief">
       This is an introduction to this app. This is an introduction to this app. This is an introduction to this app.
-      This is an introduction to this app. This is an introduction to this app. This is an introduction to this app.
+      This is an introduction to this app. This is an introduction to this app. 
     </div>
-<!--     <div class="overlay_snapshot">Snapshot</div> -->
+    <div class="overlay_snapshot">Snapshots</div>
+    <div class="overlay_snapshot_1"></div>
+    <div class="overlay_snapshot_2"></div>
   </div>
 
     <script src="jquery-1.11.2.min.js"></script>
