--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,6 @@
       <div class="overlay_app_header_name">Customer 
         <span style="font-size: 14px;">(Fake Data for Experiencing Only)</span>
       </div>
-      <div class="overlay_close">CLOSE</div>
     </div>
     <div class="overlay_iframe_container fadeIn fadeIn-50ms">
       <iframe 
@@ -88,7 +87,8 @@
         src="http://gausian-developers.github.io/user-app-template5/app/index.html">
       </iframe>
     </div>
-    <div class="overlay_install">Install</div>
+    <div class="overlay_close">CLOSE</div>
+    <div class="overlay_install">INSTALL</div>
     <div class="overlay_app_edge"></div>
     <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
     <div class="overlay_name">Customers</div>
