--- a/app/index.html
+++ b/app/index.html
@@ -77,10 +77,10 @@
   <div id="overlay_container">
     <div class="overlay_app_header">
       <div class="overlay_app_header_name">Customer 
-        <span style="font-size: 14px;">(Fake Data for Experiencing Only)</span>
+        <span style="font-size: 14px;">(Fake Data for Experiencing)</span>
       </div>
     </div>
-    <div class="overlay_iframe_container fadeIn fadeIn-50ms">
+    <div class="overlay_iframe_container">
       <iframe 
         class="full" 
         frameBorder="0" 
@@ -88,7 +88,7 @@
       </iframe>
     </div>
     <div class="overlay_close">CLOSE</div>
-    <div class="overlay_install">INSTALL</div>
+    <div class="overlay_install">GET</div>
     <div class="overlay_app_edge"></div>
     <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
     <div class="overlay_name">Customers</div>
