--- a/app/index.html
+++ b/app/index.html
@@ -94,8 +94,7 @@
     <div class="overlay_name">Customers</div>
     <div class="overlay_price">FREE</div>
     <div class="overlay_brief">
-      This is an introduction to this app. This is an introduction to this app. This is an introduction to this app.
-      This is an introduction to this app. This is an introduction to this app. 
+      It helps maintaining all your customer info. It also connects to all other apps, so they can work together for your customers.
     </div>
     <div class="overlay_snapshot">Snapshots</div>
     <div class="overlay_snapshot_1"></div>
