--- a/app/index.html
+++ b/app/index.html
@@ -75,9 +75,13 @@
   </div>
 
   <div id="overlay_container">
+    <div class="overlay_app_logo">
+      <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
+      <div class="overlay_app_get">GET</div>
+    </div>
     <div class="overlay_app_header">
       <div class="overlay_app_header_name">Customer 
-        <span style="font-size: 14px;">(Fake Data for Experiencing)</span>
+        <span style="font-size: 14px;">(Dummy Data)</span>
       </div>
     </div>
     <div class="overlay_iframe_container">
@@ -87,20 +91,25 @@
         src="http://gausian-developers.github.io/user-app-template5/app/index.html">
       </iframe>
     </div>
-    <div class="overlay_close">CLOSE</div>
-    <div class="overlay_install">GET</div>
-    <div class="overlay_app_edge"></div>
-    <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
-    <div class="overlay_name">Customers</div>
-    <div class="overlay_price">FREE</div>
-    <div class="overlay_brief">
-      It helps maintaining all your customer info. It also connects to all other apps, so they can work together for your customers.
+    <div class="overlay_close">
+      <div class="overlay_close_x">X</div>
     </div>
-    <div class="overlay_snapshot">Snapshots</div>
-    <div class="overlay_snapshot_1"></div>
-    <div class="overlay_snapshot_2"></div>
-  </div>
+    <div class="overlay_side_price">FREE
+      <div class="overlay_side_get">GET</div>
+    </div>
+    <div class="overlay_brief"></div>
+    <div class="overlay_review">
+      <div class="overlay_user_number">1,034 Users</div>
+      <span class="star-icon full">☆</span>
+      <span class="star-icon full">☆</span>
+      <span class="star-icon full">☆</span>
+      <span class="star-icon half">☆</span>
+      <span class="star-icon">☆</span>
+    </div>
+    <div class="overlay_competitor">
 
+    </div>
+  </div>
     <script src="jquery-1.11.2.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
