--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
       <div class="search_bar_input">Search</div>
       <div class="search_bar_bn"></div>
     </div>
-    <div class="main_navigator_h1">Popular</div>
+    <div class="main_navigator_h1">Recommended</div>
     <div class="main_navigator_h1">Business Tools</div>
       <div class="main_navigator_h2">Administrative</div>
       <div class="main_navigator_h2">Advertising</div>
@@ -49,11 +49,31 @@
   </div>
   
   <div class="detail_container">
-    <div class="page_header">Popular</div>
+    <div class="page_header">Recommended</div>
     <div class="app_unit">
       <div class="app_mask"></div>
       <div class="app_name">Customers</div>
       <div class="app_brief">Maintain all your customers</div>
+      <div class="app_price">FREE</div>
+      <img class="overlay_app_certified" src="img/certified.png"/>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+      <img class="overlay_app_certified" src="img/certified.png"/>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
       <div class="app_price">FREE</div>
     </div>
     <div class="app_unit">
@@ -62,16 +82,49 @@
       <div class="app_brief">Management your customers</div>
       <div class="app_price">FREE</div>
     </div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
-    <div class="app_unit"></div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+      <img class="overlay_app_certified" src="img/certified.png"/>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
   </div>
 
   <div id="overlay_container">
