update first page

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <title>GAUSIAN Store</title>
 </head>
-<body ng-controller="CustomerListCtrl" id="CustomerCtrl">
+<body ng-controller="CustomerListCtrl" id="CustomerCtrl" style="overflow: hidden;">
 <div class="whole_container">
 
   <div id="category_container">
@@ -56,11 +56,13 @@
       <div class="app_brief">Maintain all your customers</div>
       <div class="app_price">FREE</div>
       <img class="overlay_app_certified" src="img/certified.png"/>
+      <img class="overlay_app_admin" src="img/admin.png"/>
     </div>
     <div class="app_unit">
       <div class="app_mask"></div>
       <div class="app_name">Calculator</div>
       <div class="app_brief">Management your customers</div>
+      <img class="overlay_app_admin" src="img/admin.png"/>
       <div class="app_price">FREE</div>
     </div>
     <div class="app_unit">
@@ -69,6 +71,7 @@
       <div class="app_brief">Management your customers</div>
       <div class="app_price">FREE</div>
       <img class="overlay_app_certified" src="img/certified.png"/>
+      <img class="overlay_app_admin" src="img/admin.png"/>
     </div>
     <div class="app_unit">
       <div class="app_mask"></div>
