update overlay container

--- a/app/index.html
+++ b/app/index.html
@@ -130,7 +130,7 @@
     </div>
   </div>
 
-  <div id="overlay_container">
+  <div id="overlay_container" hidden>
     <div class="overlay_app_logo">
       <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
       <div class="overlay_app_get">GET</div>
