--- a/app/index.html
+++ b/app/index.html
@@ -56,14 +56,14 @@
       <div class="app_brief">Maintain all your customers</div>
       <div class="app_price">FREE</div>
       <img class="overlay_app_certified" src="img/certified.png"/>
-      <img class="overlay_app_admin" src="img/admin.png"/>
+<!--       <img class="overlay_app_admin" src="img/admin.png"/> -->
     </div>
     <div class="app_unit">
       <div class="app_mask"></div>
       <div class="app_name">Calculator</div>
       <div class="app_brief">Management your customers</div>
-      <img class="overlay_app_admin" src="img/admin.png"/>
       <div class="app_price">FREE</div>
+<!--       <img class="overlay_app_admin" src="img/admin.png"/> -->
     </div>
     <div class="app_unit">
       <div class="app_mask"></div>
@@ -71,7 +71,7 @@
       <div class="app_brief">Management your customers</div>
       <div class="app_price">FREE</div>
       <img class="overlay_app_certified" src="img/certified.png"/>
-      <img class="overlay_app_admin" src="img/admin.png"/>
+<!--       <img class="overlay_app_admin" src="img/admin.png"/> -->
     </div>
     <div class="app_unit">
       <div class="app_mask"></div>
