change hover and open effects

--- a/app/index.html
+++ b/app/index.html
@@ -128,13 +128,25 @@
       <div class="app_brief">Management your customers</div>
       <div class="app_price">FREE</div>
     </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
+    <div class="app_unit">
+      <div class="app_mask"></div>
+      <div class="app_name">Calculator</div>
+      <div class="app_brief">Management your customers</div>
+      <div class="app_price">FREE</div>
+    </div>
   </div>
 
   <div id="overlay_container" hidden>
-    <div class="overlay_app_logo">
+<!--     <div class="overlay_app_logo">
       <img class="overlay_app_img" src="http://asa.static.gausian.com/user_app/Developer/icon.png"/>
       <div class="overlay_app_get">GET</div>
-    </div>
+    </div> -->
     <div class="overlay_app_header">
       <div class="overlay_app_header_name">Customer 
         <span style="font-size: 14px;">(Dummy Data)</span>
@@ -148,7 +160,7 @@
       </iframe>
     </div>
     <div class="overlay_close">
-      <div class="overlay_close_x">X</div>
+      <div class="overlay_close_x"></div>
     </div>
     <div class="overlay_side_price">FREE
       <div class="overlay_side_get">GET</div>
@@ -163,17 +175,15 @@
       <span class="star-icon">☆</span>
     </div>
     <div class="overlay_competitor">
-
     </div>
   </div>
+
     <script src="jquery-1.11.2.min.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="js/controller.js"></script>
     <script src="js/display.js"></script>
     <script src="app.js"></script>
-    <script src="view1/view1.js"></script>
-    <script src="view2/view2.js"></script>
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
     <script src="components/version/interpolate-filter.js"></script>
