remove console log

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="customerApp" class="no-js">
+<html lang="en" ng-app="store" class="no-js">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,7 @@
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
   <title>GAUSIAN Store</title>
 </head>
-<body ng-controller="CustomerListCtrl" id="CustomerCtrl" style="overflow: hidden;">
+<body ng-controller="StoreListCtrl" style="overflow: hidden;">
 <div class="whole_container">
 
   <div id="category_container">
@@ -149,7 +149,7 @@
     </div> -->
     <div class="overlay_app_header">
       <div class="overlay_app_header_name">Customer 
-        <span style="font-size: 14px;">(Dummy Data)</span>
+        <span style="font-size: 14px;">(For Experience)</span>
       </div>
     </div>
     <div class="overlay_iframe_container">
@@ -183,7 +183,6 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="js/controller.js"></script>
     <script src="js/display.js"></script>
-    <script src="app.js"></script>
     <script src="components/version/version.js"></script>
     <script src="components/version/version-directive.js"></script>
     <script src="components/version/interpolate-filter.js"></script>
