--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
       <div class="main_navigator_h2" ng-click="filterCAT('Advertising')">Advertising</div>
       <div class="main_navigator_h2" ng-click="filterCAT('Analytics')">Analytics</div>
       <div class="main_navigator_h2" ng-click="filterCAT('Collaborative')">Collaborative</div>
-      <div class="main_navigator_h2" ng-click="filterCAT('Customer')">Customer</div>
+      <div class="main_navigator_h2" ng-click="filterCAT('Customer Relationship')">Customer Relationship</div>
       <div class="main_navigator_h2" ng-click="filterCAT('e-Commerce')">e-Commerce</div>
       <div class="main_navigator_h2" ng-click="filterCAT('Financial')">Financial</div>
       <div class="main_navigator_h2" ng-click="filterCAT('Human Resource')">Human Resource</div>
@@ -53,11 +53,14 @@
     <div class="page_header" ng-class="headerClass">{{header}}</div>
     <div ng-repeat="app in apps">
       <div class="app_unit" ng-click="openApp(app)">
+        <img class="app_ad" src="{{app.ad}}"/>
+        <div class="app_gradient"></div>
         <div class="app_mask"></div>
         <div class="app_name">{{app.name}}</div>
         <div class="app_brief">{{app.brief}}</div>
-        <div class="app_price">{{app.price}}</div>
-        <img class="overlay_app_certified" ng-show="app.certified == true" src="img/certified.png"/>
+        <div class="app_price">{{app.pricing}}</div>
+        <img class="app_icon" src="{{app.icon}}"/>
+        <img class="overlay_app_certified" ng-show="app.certified == 'true'" src="img/certified.png"/>
       </div>
     </div>
   </div>
@@ -71,10 +74,16 @@
     </div>
     <div class="overlay_iframe_container">
       <iframe
+        id="iframe_id"
         class="full" 
         frameBorder="0"
-        ng-src="{{app_path}}" >
+        ng-src="{{app_path}}">
       </iframe>
+      <div id="iframe_cover_before_loaded">
+        <div class="iframe_loading">
+          <div class="loader"></div>
+        </div>
+      </div>
     </div>
   </div>
 
