add function install_this_app

--- a/app/index.html
+++ b/app/index.html
@@ -111,7 +111,7 @@
     <div class="overlay_name">{{app.name}}</div>
     <div class="overlay_brief">{{app.brief}}</div>
     <div class="overlay_side_price">FREE
-      <div class="overlay_side_get">GET</div>
+      <div class="overlay_side_get" ng-click="install_this_app()">GET</div>
     </div>
     <div class="overlay_review">
       <div class="overlay_user_number">1,034 Users</div>
