--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 <div class="whole_container">
 
   <div id="category_container">
-    <div class="logo">GAUSIAN Store</div>
+    <div class="logo" ng-click="filterCAT('Recommended')">GAUSIAN Store</div>
     <div class="search_bar">
       <input class="search_bar_input" placeholder="Search..." ng-model="query" ng-keydown="Search($event)"></input>
       <div class="search_bar_bn" ng-click="ClickSearch()"></div>
